Refactor code structure for improved readability and maintainability

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,3 @@
-KOBO_BASE_URL=https://kc.kobotoolbox.org
-KOBO_FORM_ID=aePFsfgka3SLkt3UCJkjZ9
-KOBO_API_TOKEN=
+KOBO_BASE_URL=''
+KOBO_FORM_ID=''
+KOBO_API_TOKEN=''
